Bug 260351 - kmail filters every new message as spam, when using the default spam wizard
Summary: kmail filters every new message as spam, when using the default spam wizard
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: filtering (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 261458 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-17 10:16 UTC by andreselsuave
Modified: 2011-02-16 13:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andreselsuave 2010-12-17 10:16:53 UTC
Version:           unspecified (using KDE 4.5.4) 
OS:                Linux

Each message is filtered as spam. Even when you clear all the rules. The only way to solve it is to deactivate the "Spam handling" filter

Reproducible: Always

Steps to Reproduce:
Enable spam with the spam wizard or enable manually the "Spam handling" filter.

Actual Results:  
Every single message is filtered as spam and moved to trash

Expected Results:  
Messages should stay in their respective inboxes

64bits ubuntu
Comment 1 Christophe Marin 2011-02-16 11:43:20 UTC
*** Bug 261458 has been marked as a duplicate of this bug. ***
Comment 2 David Faure 2011-02-16 13:39:57 UTC
Git commit 3b748148de224a6bbafca5a4c683f9c0bde690ff by David Faure.
Committed on 16/02/2011 at 13:25.
Pushed by dfaure into branch 'master'.

Don't create filters with no criterias if there are no spam/virus tools.

They would match every single mail, and move it to the trash, ouch.
Solution: when the wizard shows "no tools found", skip all other pages
and offer "Finish" right away. For future-proofness, I also disabled
the checkboxes on the 2nd page, in case one day this page is used for more
(e.g. for disabling spam handling again)

FIXED-IN: 4.6
BUG: 260351

M  +31   -9    kmail/antispamwizard.cpp     
M  +6    -0    kmail/antispamwizard.h     

http://commits.kde.org/kdepim/3b748148de224a6bbafca5a4c683f9c0bde690ff