Don't create filters with no criterias if there are no spam/virus tools.

They would match every single mail, and move it to the trash, ouch.
Solution: when the wizard shows "no tools found", skip all other pages
and offer "Finish" right away. For future-proofness, I also disabled
the checkboxes on the 2nd page, in case one day this page is used for more
(e.g. for disabling spam handling again)

FIXED-IN: 4.6
BUG: 260351